src/app/components/top-bar/top-bar.component.scss
#topBarContent {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 3.375rem;
  width: 100vw;
  background-color: #3a3a3a;
  box-shadow: 0.1rem 0.1rem 0.5rem 0.3rem rgba(0, 0, 0, 0.5);
  z-index: 1;
}

#connection-info {
  display: inline-flex;
  flex-direction: row;
  align-items: center;

  .connection {
    color: #ffffff;
    display: flex;
    align-items: center;

    div {
      color: #4A4A4A;
      font-weight: 400;
    }

    span {
      font-weight: 500;
      color: #989898;
    }
  }

}

#top-bar-icon-group {
  display: flex;
  align-items: center;

  #file-icons-info {
    display: flex;
    align-items: center;
    margin-right: 1rem;
    gap: 1rem;

    #file-queue-icon {
      display: flex;
      align-items: center;
      max-height: 32px;
    }

    #file-queue-text {
      color: var(--ion-background-color);
      position: relative;
      left: 21px;
      width: 18px;
      text-align: center;
      font-size: small;
      font-weight: 600;
    }
  }
}

#top-bar-divider {
  height: 2rem;
  width: 1px;
  background: grey;
}

#hamburger-btn {
  display: flex;
  align-items: center;
  justify-content: center;

  img {
    max-width: 32px;
    height: 32px;
  }
}

#open-file {
  margin-left: 1rem;
  height: inherit;
  width: 12rem;
  font-size: 1.15rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0;

  mat-icon {
    font-size: 26px;
    height: 26px;
    width: 26px;
  }
}

